--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,32 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Create .env file
+        uses: ozaytsev86/create-env-file@v1
+        with:
+          ENV_API_URL: ${{ vars.API_URL }}
+
       - name: "Build project"
         run: |
-          echo "${{ vars.API_URL }}"
-          echo "${{ vars.TOKEN }}"
+          yarn install
+          yarn build --force
+          rm -r node_modules
+
+      - name: AWS CodeDeploy
+        uses: sourcetoad/aws-codedeploy-action@v1
+        with:
+          aws_access_key: ${{ secrets.AWS_SECRET_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+          aws_region: us-east-1
+          codedeploy_name: frontend
+          codedeploy_group: Dev
+          codedeploy_register_only: true
+          s3_bucket: myfrontendbuild
+          s3_folder: dev
+          max_polling_iterations: 0
+          directory: ./
