--- a/appspec.yml
+++ b/appspec.yml
@@ -7,11 +7,15 @@ files:
 file_exists_behavior: OVERWRITE
 
 hooks:
-  ApplicationStop:
-    - location: scripts/stop-server.sh
+  BeforeInstall:
+    - location: scripts/before-install.sh
+      timeout: 300
+      runas: root
+  AfterInstall:
+    - location: scripts/after-install.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: scripts/start-server.sh
+    - location: scripts/application-start.sh
       timeout: 300
       runas: root
